[package]
name = "block_effects"
version = "0.1.0"
authors = ["TheNappap <napoleonpapiertjes@gmail.com>"]
edition = "2018"
description = "A macro to chain block effects"
readme = "README.md"
repository = "https://github.com/TheNappap/block_effects"
license-file = "LICENSE"
keywords = ["block", "effect", "indentation", "unsafe"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
proc-macro = true
